# liboptic

./: Cargo.toml  README.md  REFERENCES.md
displayid/: Cargo.toml
edid/: Cargo.toml  README.md
edid/examples/: linux.rs  print_sections.rs  remove_serial.rs
edid/scripts/: README.md  crater_run.rs  find_good_tests.rs  print_sections.rs  remove_serial.rs
edid/src/: error.rs  lib.rs  prelude.rs
edid/src/parser/: basic_info.rs  color.rs  est_timings.rs  header.rs  id.rs  mod.rs  std_timings.rs  util.rs  version.rs
edid/src/parser/_18bytes/: mod.rs  preferred_tm.rs
edid/src/parser/_18bytes/descriptors/: _13_byte_string.rs  color_point.rs  cvt.rs  dcm.rs  iii.rs  mod.rs  more_std_timings.rs  range_limits.rs
edid/src/structures/: _18bytes.rs  basic_info.rs  color.rs  est_timings.rs  extension.rs  id.rs  mod.rs  std_timings.rs  version.rs
edid/src/structures/desc/: color_point.rs  cvt_3_byte_timing.rs  display_range_limits.rs  mod.rs
edid/tests/assets/: 1.info  1.input  dell_s2417dg.info  dell_s2417dg.raw.input  linuxhw_edid_Analog_AOC_AOC0320_455954E7CA14.input  linuxhw_edid_Digital_BOE_BOE07AF_BD22D8FDF96B.info  linuxhw_edid_Digital_BOE_BOE07AF_BD22D8FDF96B.input  linuxhw_edid_Digital_Goldstar_GSM7666_FE91A60D5B6E.input  linuxhw_edid_Digital_Lenovo_LEN0017_3AF8B597ECB9.input  linuxhw_edid_Digital_MSI_MSIAF82_4B2991D4299A.input  linuxhw_edid_Digital_Others_HJW0000_F67302F2ED4C.input  linuxhw_edid_EDID_Digital_Samsung_SAM02E3_2C47316EFF13.input  linuxhw_edid_EDID_Digital_Sony_SNY05FA_93D328459FF6.input
edid/tests/assets/bad/: bad.1.input  linuxhw_edid_EDID_Digital_LG Display_LGD0555_7D17E3014129.input
