[package]
name = "edid"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = { version = "1.0.1", default-features = false }
tracing = { version = "0.1.40", default-features = false, features = [
    "attributes",
] }
pnpid = "=1.0.2"
arrayvec = { version = "0.7.6", default-features = false }
bytemuck = { version = "1.19.0", default-features = false, features = [
    "must_cast",
] }
fraction = { version = "0.15.3", default-features = false, features = [
    "with-decimal",
] }
pisserror = { version = "0.3.0-rc.1", default-features = false }

[dev-dependencies]
colored = "2.1.0"
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
tracing-subscriber = "0.3.18"

[lints.clippy]
struct_field_names = "deny"
partial_pub_fields = "deny"
use_self = "deny"
semicolon_if_nothing_returned = "deny"
