[package]
name = "liboptic_edid"
description = "Parses EDIDs from raw bytes (in 100% Rust)"
version = "0.2.0"
license = "MPL-2.0"
repository = "https://github.com/onkoe/liboptic"
readme = "./README.md"
keywords = ["edid", "edid-decode", "liboptic"]
categories = ["embedded", "encoding", "no-std"]
edition = "2021"

[dependencies]
bitvec = { version = "1.0.1", default-features = false }
tracing = { version = "0.1.40", default-features = false, features = [
    "attributes",
] }
pnpid = "=1.0.2"
arrayvec = { version = "0.7.6", default-features = false }
bytemuck = { version = "1.19.0", default-features = false, features = [
    "must_cast",
] }
pisserror = { version = "0.3.0-rc.2", default-features = false }
nobcd = { version = "0.2.0" }
rust_decimal = { version = "1.36.0", default-features = false, features = [
    "c-repr",
] }
rust_decimal_macros = "1.36"
num-rational = { version = "0.4.2", default-features = false }
num-traits = { version = "0.2.19", default-features = false }


[dev-dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
tracing-subscriber = "0.3.18"

[lints.clippy]
struct_field_names = "deny"
partial_pub_fields = "deny"
use_self = "deny"
semicolon_if_nothing_returned = "deny"
